--- a/badger/templates/badger/badge_edit.html
+++ b/badger/templates/badger/badge_edit.html
@@ -11,7 +11,7 @@
 
     <form id="edit_badge" class="form-horizontal" 
             method="POST" action="" enctype="multipart/form-data">
-        {{ csrf }}
+        {% csrf_token %}
         <ul>
             {{ form.as_ul }}
             <li><input type="submit" class="btn btn-large btn-primary submit" value="{{ _("Save badge") }}"></li>
