--- a/badger/templates/badger/award_delete.html
+++ b/badger/templates/badger/award_delete.html
@@ -18,7 +18,7 @@
     <section class="award span8">
 
         <form id="delete_award" method="POST" action="" enctype="multipart/form-data">
-            {{ csrf }}
+            {% csrf_token %}
             <p><strong>{{ _("Delete this award, are you sure?") }}</strong></p>
             <ul>
                 <li><input type="submit" class="btn btn-large btn-danger submit" value="{{ _("Yes, delete award") }}"></li>
