--- a/badger/templates/badger/badge_award.html
+++ b/badger/templates/badger/badge_award.html
@@ -5,7 +5,7 @@
 {% block content %}
 <h2>Award a badge</h2>
 <form id="award_badge" method="POST" action="" enctype="multipart/form-data">
-    {{ csrf }}
+    {% csrf_token %}
     <ul>
         {{ form.as_ul }}
         <li><input type="submit" class="submit" value="Award"></li>
