--- a/badger/templates/badger/badge_nominate_for.html
+++ b/badger/templates/badger/badge_nominate_for.html
@@ -19,7 +19,7 @@
         </header>
 
         <form id="nominate_badge" method="POST" action="" enctype="multipart/form-data">
-            {{ csrf }}
+            {% csrf_token %}
             <ul>
                 {{ form.as_ul }}
                 <li><input type="submit" class="btn btn-large btn-primary submit" value="{{ _("Submit nominations") }}"></li>
